--- a/app/src/main/res/layout/activity_edit_record.xml
+++ b/app/src/main/res/layout/activity_edit_record.xml
@@ -53,11 +53,11 @@
 
         <ScrollView
             android:id="@+id/sv_tbl_rec"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="408dp"
+            android:layout_height="324dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textCost">
+            app:layout_constraintBottom_toTopOf="@+id/textCost"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TableLayout
                 android:id="@+id/tblRecord"
